--- a/extra/dtk6core/PKGBUILD
+++ b/extra/dtk6core/PKGBUILD
@@ -3,7 +3,7 @@
 # Contributor: Xu Fasheng <fasheng.xu[AT]gmail.com>
 
 pkgname=dtk6core
-pkgver=6.0.32
+pkgver=6.0.33
 pkgrel=1
 pkgdesc='DTK core modules'
 arch=('x86_64')
@@ -13,17 +13,14 @@ depends=('deepin-desktop-base' 'dtkcommon' 'dtk6log' 'gcc-libs' 'glibc' 'icu' 'l
          'uchardet')
 makedepends=('git' 'cmake' 'ninja' 'qt6-tools' 'gtest' 'doxygen')
 source=("git+https://github.com/linuxdeepin/dtk6core.git#tag=$pkgver"
-         $pkgname-qt-6.9.patch::https://github.com/linuxdeepin/dtkcore/commit/8db10c91452d25fc3d380f685847bd53b769d3ad.patch
-         $pkgname-qt-6.9-new.patch::https://github.com/linuxdeepin/dtkcore/commit/c250cf2111e5e3fb619f7507ac58e6d08150d89e.patch)
-sha512sums=('60a5972bbef855feb13c14cef883987781ae576576177acf9fb1661a8c5e5689a3a329ac196671f31ca5ca1febc9edbe8eaae9fc1bf441ee7cc800592bfabd78'
-            '37c2e476d47e2fd2b10b19e6ff81994ffa8b961dcd54c4056ec5c00a07684d44df4ab2dc57d617a6ee300dfd8bec88485d933485076cd200f420df36bc6ae674'
-            'd116a8425c4c27ed423aff6be485775ae7df391d0ae568c81f24fc71cc6b4cb08bf4bd47a936d7387e6580d166bc3e4cc58827c6a1bed9399f5bc265aa9c1047')
+         $pkgname-qt-6.9.patch::https://github.com/linuxdeepin/dtkcore/commit/8db10c91452d25fc3d380f685847bd53b769d3ad.patch)
+sha512sums=('60430db491153de88f4aecda70707686802eddec60a1263c9f3c05f1622b3f9de224ddacbf4b5570b7836e23ece583d181c3a39b109a76c189da86e49ce7094d'
+            '37c2e476d47e2fd2b10b19e6ff81994ffa8b961dcd54c4056ec5c00a07684d44df4ab2dc57d617a6ee300dfd8bec88485d933485076cd200f420df36bc6ae674')
 
 prepare() {
   cd dtk6core
   sed -i 's|/etc/os-version|/etc/uos-version|' src/dsysinfo.cpp
   patch -p1 -i ../$pkgname-qt-6.9.patch
-  patch -p1 -i ../$pkgname-qt-6.9-new.patch
 }
 
 build() {
