--- a/extra/r2ghidra/PKGBUILD
+++ b/extra/r2ghidra/PKGBUILD
@@ -1,9 +1,9 @@
 # Maintainer: Levente Polyak <anthraxx[at]archlinux[dot]org>
 
 pkgname=r2ghidra
-_ghidra_native=21b6dbafee5b8265ee000827dd31f542ad46861d
-pkgver=5.9.4
-pkgrel=2
+_ghidra_native=0.5.0
+pkgver=5.9.8
+pkgrel=1
 pkgdesc='Deep ghidra decompiler integration for radare2 and iaito'
 url='https://github.com/radareorg/r2ghidra'
 arch=(x86_64)
@@ -12,6 +12,7 @@ depends=(
   radare2
   gcc-libs
   glibc
+  zlib
 )
 makedepends=(
   git
@@ -19,10 +20,10 @@ makedepends=(
 provides=(radare2-r2ghidra)
 replaces=(r2ghidra-dec)
 source=("git+https://github.com/radareorg/r2ghidra#tag=${pkgver}"
-        "git+https://github.com/radareorg/ghidra-native.git#commit=${_ghidra_native}"
+        "git+https://github.com/radareorg/ghidra-native.git#tag=${_ghidra_native}"
         git+https://github.com/zeux/pugixml.git)
-sha512sums=('88f57d5d71eef95ba2545d14650ab99f857433d74d7b986bbc3550b0145dea6339da61d320202825bf73deef55467b84f1314e1fce8eb84dcea8eab7a6a10751'
-            'b715599743e675ccf0925734c8fc876a2c3f0477d4b9d44b293ea152b4b3214bd552505e752277068d22be0f2aea79e323ff8b5dafa242423e68f56171db5c11'
+sha512sums=('9d34a369d442409b55d7c994a847b5e06c23ca8df0bd213c8f959002b1c7603b60a6ea273b594dcacb0cf4bf8292a4b111fff67086afe15d1acb36ba9e15793a'
+            '1ab76f465e8d8a4ead1d60a18ccd0a533492cf7dc974769641e7891bf4273dea7e1035ac4f104374376a2b00a4675de3153f0fc4c8ac4ee899cadc1b34cffafe'
             'SKIP')
 
 prepare() {
