--- a/extra/3cpio/PKGBUILD
+++ b/extra/3cpio/PKGBUILD
@@ -3,7 +3,7 @@
 pkgname=3cpio
 pkgver=0.8.1
 #_commit=213416e787f147c2c5066ef45b83fa58aa0d30db
-pkgrel=1
+pkgrel=2
 pkgdesc='Manage Linux kernel initramfs cpio files written in Rust'
 arch=('x86_64')
 url='https://github.com/bdrung/3cpio'
@@ -13,6 +13,7 @@ depends=(
   gcc-libs
 )
 makedepends=(
+  asciidoctor
   git
   rust
 )
@@ -42,6 +43,8 @@ b2sums=('9ba0b8a1e8033ff297e5332e7f57376f44924a202573d8eb10a09595adfbb4d1fd444ec
 build() {
   cd "${pkgname}"
   cargo build --release --locked
+  asciidoctor -b manpage man/3cpio.1.adoc
+  gzip man/3cpio.1
 }
 
 check() {
@@ -51,6 +54,7 @@ check() {
 
 package() {
   cd "${pkgname}"
+  install -Dm 644 man/3cpio.1.gz "${pkgdir}/usr/share/man/man1/3cpio.1.gz"
   install -Dm755 target/release/3cpio "${pkgdir}/usr/bin/3cpio"
   install -Dm 644 LICENSE "${pkgdir}/usr/share/licenses/${pkgname}/LICENSE"
 }
