--- a/extra/cargo-license/PKGBUILD
+++ b/extra/cargo-license/PKGBUILD
@@ -1,7 +1,8 @@
 # Maintainer: David Runge <dvzrv@archlinux.org>
+# Maintainer: Bert Peters <bertptrs@archlinux.org>
 
 pkgname=cargo-license
-pkgver=0.6.1
+pkgver=0.7.0
 pkgrel=1
 pkgdesc="Cargo subcommand to see license of dependencies"
 arch=(x86_64)
@@ -16,8 +17,8 @@ makedepends=(rust)
 source=(
   $pkgname-$pkgver.tar.gz::$url/archive/refs/tags/v$pkgver.tar.gz
 )
-sha512sums=('b98a4073846f57e2cbeccab20be1212dd0dc227e7c1ed41f6777e051335bb68469ac58c30e6cbb7d8180b7d6dc9203c0a700e9d59a9ca025168c23bf883a7f5c')
-b2sums=('eb2b543dd15ca1893b7397c97f81ecb7a891ca1dc0fd54c7f035eb98a4900aed9eff41caeb268f750f5b8ac3995c51a6d0ee50b4dc469cc4c44bb19c121c0c81')
+sha512sums=('111e051fb3984012631b24f4f0888ea3225bbeb8b445fb9ba192a660316db1c89e5eea8faf3e234cc202643bcb4c219d4be6cc255183e775a9dde1c253337183')
+b2sums=('cf3f0e4207615e22341ebe9db5b801e9f1cb54a3ee08e5fc1220ba663039a738e10fabb58f3191f48e65edf408632107e3229bdea41b4597ca2f9b326e2c4b4a')
 
 prepare() {
   cd $pkgname-$pkgver
