--- a/extra/haskell-prettyprinter-compat-ansi-wl-pprint/PKGBUILD
+++ b/extra/haskell-prettyprinter-compat-ansi-wl-pprint/PKGBUILD
@@ -3,7 +3,7 @@
 _hkgname=prettyprinter-compat-ansi-wl-pprint
 pkgname=haskell-prettyprinter-compat-ansi-wl-pprint
 pkgver=1.0.2
-pkgrel=3
+pkgrel=1
 pkgdesc="Drop-in compatibility package to migrate from »ansi-wl-pprint« to »prettyprinter«."
 url="http://github.com/quchen/prettyprinter"
 license=('BSD-2-Clause')
@@ -16,13 +16,13 @@ sha256sums=('05b27251f18b91efbf14c687c2851323b92032220337cd04ab1f741a84019e55')
 build() {
   cd $_hkgname-$pkgver
 
-  runhaskell Setup configure -O --enable-shared --enable-debug-info --enable-executable-dynamic --disable-library-vanilla \
+  runhaskell Setup configure -O --enable-shared --enable-executable-dynamic --disable-library-vanilla \
     --prefix=/usr --docdir=/usr/share/doc/$pkgname --datasubdir=$pkgname --enable-tests \
     --dynlibdir=/usr/lib --libsubdir=\$compiler/site-local/\$pkgid \
     --ghc-option=-optl-Wl\,-z\,relro\,-z\,now \
     --ghc-option='-pie' 
 
-  runhaskell Setup build $MAKEFLAGS
+  runhaskell Setup build
   runhaskell Setup register --gen-script
   runhaskell Setup unregister --gen-script
   sed -i -r -e "s|ghc-pkg.*update[^ ]* |&'--force' |" register.sh
@@ -31,7 +31,7 @@ build() {
 
 check() {
   cd $_hkgname-$pkgver
-  runhaskell Setup test --show-details=direct
+  runhaskell Setup test
 }
 
 package() {
