--- a/extra/metronome/PKGBUILD
+++ b/extra/metronome/PKGBUILD
@@ -2,7 +2,7 @@
 
 pkgname=metronome
 pkgver=1.3.0
-pkgrel=1
+pkgrel=2
 pkgdesc='Beats the rhythm for you to keep the tempo'
 arch=(x86_64)
 url='https://gitlab.gnome.org/World/metronome'
@@ -27,14 +27,23 @@ makedepends=(
   meson
   rust
 )
-source=("git+https://gitlab.gnome.org/World/metronome.git#tag=$pkgver")
-b2sums=(1208bdd46f27dee7220ffec0ac73b86c3e0b90c0db8a33e01c4eb3032da2f98bc1e0113c563100236cc95e631d007c37d37ca100ccd3ac2dd0a9fbe07e00cb84)
+source=(
+  "git+https://gitlab.gnome.org/World/metronome.git#tag=$pkgver"
+  metronome-dbus-activatable.patch
+)
+b2sums=(
+  1208bdd46f27dee7220ffec0ac73b86c3e0b90c0db8a33e01c4eb3032da2f98bc1e0113c563100236cc95e631d007c37d37ca100ccd3ac2dd0a9fbe07e00cb84
+  2677c07f55319d25448ce5b446dbc33f2414d7e4379e933d8ec514d6efba510c56938d22ac7305b0c133060470f4bd483d1b3d9a26540b54cf3b1dfa47838b1d
+)
 
 prepare() {
   cd $pkgname
 
   CARGO_HOME="$srcdir/build/cargo-home" \
     cargo fetch --locked --target "$(rustc -vV | sed -n 's/host: //p')"
+
+  # https://gitlab.gnome.org/World/metronome/-/merge_requests/62
+  git apply -3 ../metronome-dbus-activatable.patch
 }
 
 build() {
